fcc/generated/fcc/grammar/FCCParser.py
# Generated from fcc/grammar/FCCParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FCCParser ( Parser ):

    grammarFileName = "FCCParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'func'", "'ret'", "'void'", "'int'", 
                     "'float'", "'bool'", "'char'", "'if'", "'elif'", "'else'", 
                     "'for'", "'while'", "'vault'", "'true'", "'false'", 
                     "'traigase'", "'main'", "'continue'", "'break'", "'@secure'", 
                     "'=='", "'!='", "'<='", "'>='", "'<<'", "'>>'", "'<'", 
                     "'>'", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
                     "'|='", "'^='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'~'", "'&'", "'|'", "'^'", "'!'", "'='", "'{'", "'}'", 
                     "'('", "')'", "'['", "']'", "';'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "FUNC", "RET", "VOID", "INT", "FLOAT", 
                      "BOOL", "CHAR", "IF", "ELIF", "ELSE", "FOR", "WHILE", 
                      "VAULT", "TRUE", "FALSE", "TRAIGASE", "MAIN", "CONTINUE", 
                      "BREAK", "SECURE", "EQ", "NEQ", "LE", "GE", "SHIFT_LEFT", 
                      "SHIFT_RIGHT", "LT", "GT", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "STAR_ASSIGN", "SLASH_ASSIGN", "PERCENT_ASSIGN", "AND_ASSIGN", 
                      "OR_ASSIGN", "XOR_ASSIGN", "PLUS", "MINUS", "STAR", 
                      "SLASH", "PERCENT", "POWER", "AMPERSAND", "OR", "XOR", 
                      "NOT", "ASSIGN", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", "HEX_LITERAL", 
                      "INVALID_REAL_LITERAL", "REAL_LITERAL", "INT_LITERAL", 
                      "CHAR_LITERAL", "STRING_LITERAL", "IDENTIFIER", "INVALID_HASH_OPERATOR", 
                      "BLOCK_COMMENT", "UNCLOSED_BLOCK_COMMENT", "LINE_COMMENT", 
                      "INVALID_OPERATOR", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_topLevelDecl = 1
    RULE_importStmt = 2
    RULE_secureFunctionDecl = 3
    RULE_secureAnnotation = 4
    RULE_functionName = 5
    RULE_functionDecl = 6
    RULE_globalVarDecl = 7
    RULE_parameterList = 8
    RULE_parameter = 9
    RULE_typeRule = 10
    RULE_baseType = 11
    RULE_arraySuffix = 12
    RULE_block = 13
    RULE_statement = 14
    RULE_varDecl = 15
    RULE_variableDeclaratorList = 16
    RULE_variableDeclarator = 17
    RULE_initializer = 18
    RULE_assignmentStmt = 19
    RULE_assignment = 20
    RULE_assignmentOperator = 21
    RULE_assignable = 22
    RULE_returnStmt = 23
    RULE_continueStmt = 24
    RULE_breakStmt = 25
    RULE_exprStmt = 26
    RULE_ifStmt = 27
    RULE_elifBranch = 28
    RULE_elseBranch = 29
    RULE_whileStmt = 30
    RULE_forStmt = 31
    RULE_forInitializer = 32
    RULE_forIncrement = 33
    RULE_forCondition = 34
    RULE_varDeclNoSemi = 35
    RULE_expression = 36
    RULE_bitwiseOrExpression = 37
    RULE_bitwiseXorExpression = 38
    RULE_bitwiseAndExpression = 39
    RULE_equalityExpression = 40
    RULE_relationalExpression = 41
    RULE_shiftExpression = 42
    RULE_additiveExpression = 43
    RULE_multiplicativeExpression = 44
    RULE_unaryExpression = 45
    RULE_postfixExpression = 46
    RULE_postfixSuffix = 47
    RULE_argumentList = 48
    RULE_primary = 49
    RULE_literal = 50

    ruleNames =  [ "program", "topLevelDecl", "importStmt", "secureFunctionDecl", 
                   "secureAnnotation", "functionName", "functionDecl", "globalVarDecl", 
                   "parameterList", "parameter", "typeRule", "baseType", 
                   "arraySuffix", "block", "statement", "varDecl", "variableDeclaratorList", 
                   "variableDeclarator", "initializer", "assignmentStmt", 
                   "assignment", "assignmentOperator", "assignable", "returnStmt", 
                   "continueStmt", "breakStmt", "exprStmt", "ifStmt", "elifBranch", 
                   "elseBranch", "whileStmt", "forStmt", "forInitializer", 
                   "forIncrement", "forCondition", "varDeclNoSemi", "expression", 
                   "bitwiseOrExpression", "bitwiseXorExpression", "bitwiseAndExpression", 
                   "equalityExpression", "relationalExpression", "shiftExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "postfixExpression", "postfixSuffix", "argumentList", 
                   "primary", "literal" ]

    EOF = Token.EOF
    FUNC=1
    RET=2
    VOID=3
    INT=4
    FLOAT=5
    BOOL=6
    CHAR=7
    IF=8
    ELIF=9
    ELSE=10
    FOR=11
    WHILE=12
    VAULT=13
    TRUE=14
    FALSE=15
    TRAIGASE=16
    MAIN=17
    CONTINUE=18
    BREAK=19
    SECURE=20
    EQ=21
    NEQ=22
    LE=23
    GE=24
    SHIFT_LEFT=25
    SHIFT_RIGHT=26
    LT=27
    GT=28
    PLUS_ASSIGN=29
    MINUS_ASSIGN=30
    STAR_ASSIGN=31
    SLASH_ASSIGN=32
    PERCENT_ASSIGN=33
    AND_ASSIGN=34
    OR_ASSIGN=35
    XOR_ASSIGN=36
    PLUS=37
    MINUS=38
    STAR=39
    SLASH=40
    PERCENT=41
    POWER=42
    AMPERSAND=43
    OR=44
    XOR=45
    NOT=46
    ASSIGN=47
    LBRACE=48
    RBRACE=49
    LPAREN=50
    RPAREN=51
    LBRACK=52
    RBRACK=53
    SEMI=54
    COMMA=55
    DOT=56
    HEX_LITERAL=57
    INVALID_REAL_LITERAL=58
    REAL_LITERAL=59
    INT_LITERAL=60
    CHAR_LITERAL=61
    STRING_LITERAL=62
    IDENTIFIER=63
    INVALID_HASH_OPERATOR=64
    BLOCK_COMMENT=65
    UNCLOSED_BLOCK_COMMENT=66
    LINE_COMMENT=67
    INVALID_OPERATOR=68
    WS=69
    ERROR_CHAR=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FCCParser.EOF, 0)

        def topLevelDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCCParser.TopLevelDeclContext)
            else:
                return self.getTypedRuleContext(FCCParser.TopLevelDeclContext,i)


        def getRuleIndex(self):
            return FCCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = FCCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1122554) != 0):
                self.state = 102
                self.topLevelDecl()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(FCCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStmt(self):
            return self.getTypedRuleContext(FCCParser.ImportStmtContext,0)


        def secureFunctionDecl(self):
            return self.getTypedRuleContext(FCCParser.SecureFunctionDeclContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(FCCParser.FunctionDeclContext,0)


        def globalVarDecl(self):
            return self.getTypedRuleContext(FCCParser.GlobalVarDeclContext,0)


        def getRuleIndex(self):
            return FCCParser.RULE_topLevelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelDecl" ):
                listener.enterTopLevelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelDecl" ):
                listener.exitTopLevelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelDecl" ):
                return visitor.visitTopLevelDecl(self)
            else:
                return visitor.visitChildren(self)




    def topLevelDecl(self):

        localctx = FCCParser.TopLevelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelDecl)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.importStmt()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.secureFunctionDecl()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.functionDecl()
                pass
            elif token in [3, 4, 5, 6, 7, 13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.globalVarDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRAIGASE(self):
            return self.getToken(FCCParser.TRAIGASE, 0)

        def STRING_LITERAL(self):
            return self.getToken(FCCParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return FCCParser.RULE_importStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStmt" ):
                listener.enterImportStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStmt" ):
                listener.exitImportStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStmt" ):
                return visitor.visitImportStmt(self)
            else:
                return visitor.visitChildren(self)




    def importStmt(self):

        localctx = FCCParser.ImportStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(FCCParser.TRAIGASE)
            self.state = 117
            self.match(FCCParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SecureFunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def secureAnnotation(self):
            return self.getTypedRuleContext(FCCParser.SecureAnnotationContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(FCCParser.FunctionDeclContext,0)


        def getRuleIndex(self):
            return FCCParser.RULE_secureFunctionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSecureFunctionDecl" ):
                listener.enterSecureFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSecureFunctionDecl" ):
                listener.exitSecureFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSecureFunctionDecl" ):
                return visitor.visitSecureFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def secureFunctionDecl(self):

        localctx = FCCParser.SecureFunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_secureFunctionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.secureAnnotation()
            self.state = 120
            self.functionDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SecureAnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECURE(self):
            return self.getToken(FCCParser.SECURE, 0)

        def LPAREN(self):
            return self.getToken(FCCParser.LPAREN, 0)

        def HEX_LITERAL(self):
            return self.getToken(FCCParser.HEX_LITERAL, 0)

        def RPAREN(self):
            return self.getToken(FCCParser.RPAREN, 0)

        def getRuleIndex(self):
            return FCCParser.RULE_secureAnnotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSecureAnnotation" ):
                listener.enterSecureAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSecureAnnotation" ):
                listener.exitSecureAnnotation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSecureAnnotation" ):
                return visitor.visitSecureAnnotation(self)
            else:
                return visitor.visitChildren(self)




    def secureAnnotation(self):

        localctx = FCCParser.SecureAnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_secureAnnotation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(FCCParser.SECURE)
            self.state = 123
            self.match(FCCParser.LPAREN)
            self.state = 124
            self.match(FCCParser.HEX_LITERAL)
            self.state = 125
            self.match(FCCParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(FCCParser.IDENTIFIER, 0)

        def MAIN(self):
            return self.getToken(FCCParser.MAIN, 0)

        def getRuleIndex(self):
            return FCCParser.RULE_functionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionName" ):
                listener.enterFunctionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionName" ):
                listener.exitFunctionName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionName" ):
                return visitor.visitFunctionName(self)
            else:
                return visitor.visitChildren(self)




    def functionName(self):

        localctx = FCCParser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not(_la==17 or _la==63):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(FCCParser.FUNC, 0)

        def typeRule(self):
            return self.getTypedRuleContext(FCCParser.TypeRuleContext,0)


        def functionName(self):
            return self.getTypedRuleContext(FCCParser.FunctionNameContext,0)


        def LPAREN(self):
            return self.getToken(FCCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(FCCParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(FCCParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(FCCParser.ParameterListContext,0)


        def getRuleIndex(self):
            return FCCParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = FCCParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(FCCParser.FUNC)
            self.state = 130
            self.typeRule()
            self.state = 131
            self.functionName()
            self.state = 132
            self.match(FCCParser.LPAREN)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8440) != 0):
                self.state = 133
                self.parameterList()


            self.state = 136
            self.match(FCCParser.RPAREN)
            self.state = 137
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalVarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(FCCParser.VarDeclContext,0)


        def getRuleIndex(self):
            return FCCParser.RULE_globalVarDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalVarDecl" ):
                listener.enterGlobalVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalVarDecl" ):
                listener.exitGlobalVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalVarDecl" ):
                return visitor.visitGlobalVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def globalVarDecl(self):

        localctx = FCCParser.GlobalVarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_globalVarDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.varDecl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCCParser.ParameterContext)
            else:
                return self.getTypedRuleContext(FCCParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FCCParser.COMMA)
            else:
                return self.getToken(FCCParser.COMMA, i)

        def getRuleIndex(self):
            return FCCParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = FCCParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.parameter()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==55:
                self.state = 142
                self.match(FCCParser.COMMA)
                self.state = 143
                self.parameter()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeRule(self):
            return self.getTypedRuleContext(FCCParser.TypeRuleContext,0)


        def IDENTIFIER(self):
            return self.getToken(FCCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return FCCParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = FCCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.typeRule()
            self.state = 150
            self.match(FCCParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseType(self):
            return self.getTypedRuleContext(FCCParser.BaseTypeContext,0)


        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(FCCParser.STAR)
            else:
                return self.getToken(FCCParser.STAR, i)

        def arraySuffix(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FCCParser.ArraySuffixContext)
            else:
                return self.getTypedRuleContext(FCCParser.ArraySuffixContext,i)


        def getRuleIndex(self):
            return FCCParser.RULE_typeRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeRule" ):
                listener.enterTypeRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeRule" ):
                listener.exitTypeRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeRule" ):
                return visitor.visitTypeRule(self)
            else:
                return visitor.visitChildren(self)




    def typeRule(self):

        localctx = FCCParser.TypeRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typeRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.baseType()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 153
                self.match(FCCParser.STAR)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==52:
                self.state = 159
                self.arraySuffix()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(FCCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(FCCParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(FCCParser.BOOL, 0)

        def CHAR(self):
            return self.getToken(FCCParser.CHAR, 0)

        def VOID(self):
            return self.getToken(FCCParser.VOID, 0)

        def VAULT(self):
            return self.getToken(FCCParser.VAULT, 0)

        def getRuleIndex(self):
            return FCCParser.RULE_baseType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseType" ):
                listener.enterBaseType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseType" ):
                listener.exitBaseType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseType" ):
                return visitor.visitBaseType(self)
            else:
                return visitor.visitChildren(self)




    def baseType(self):

        localctx = FCCParser.BaseTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_baseType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8440) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraySuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(FCCParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(FCCParser.RBRACK, 0)

        def expression(self):
            return self.getTypedRuleContext(FCCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return FCCParser.RULE_arraySuffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraySuffix" ):
                listener.enterArraySuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraySuffix" ):
                listener.exitArraySuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraySuffix" ):
                return visitor.visitArraySuffix(self)
            else:
                return visitor.visitChildren(self)




    def arraySuffix(self):
